--- a/src/components/Slider/_slider.scss
+++ b/src/components/Slider/_slider.scss
@@ -11,37 +11,7 @@
 @import '../../globals/scss/layout';
 @import '../../globals/scss/import-once';
 @import '../Form/form';
-//@import '../TextInput/text-input';
-
-// @mixin tracky($fill: 0) {
-//   // box-sizing: border-box;
-//   // border: none;
-//   // width: $track-w; height: $track-h;
-//   // background: $track-c;
-//   width: 250px;
-//   height: 4px;
-//   background: var(--ui-04);
-//   transition: all 300ms $wfp--standard-easing;
-//   border: none;
-//   border-radius: 1px;
-//   cursor: pointer;
-
-//   @if $fill == 1 {
-//     & {
-//       background: linear-gradient(var(--interactive-01), var(--interactive-01))
-//         0 /
-//         var(--sx)
-//         100%
-//         no-repeat
-//         var(--ui-04);
-//     }
-//   }
-// }
-
-// @mixin fill() {
-//   height: 0.25em;
-//   background: var(--interactive-01);
-// }
+@import '../TextInput/text-input';
 
 @include exports('slider') {
   .#{$prefix}--slider-container {
@@ -74,7 +44,12 @@
       border: none;
       border-radius: 1px;
       cursor: pointer;
-      // @include tracky(1);
+    }
+
+    &::-moz-range-track {
+      background: var(--ui-04);
+      height: 4px;
+      cursor: pointer;
     }
 
     &::-webkit-slider-thumb {
@@ -89,26 +64,27 @@
       transition: transform 100ms $wfp--standard-easing,
         background 100ms $wfp--standard-easing;
     }
+    &::-moz-range-thumb {
+      -webkit-appearance: none;
+      border: none;
+      height: 1.5rem;
+      width: 1.5rem;
+      border-radius: 50%;
+      background: var(--interactive-01);
+      margin-top: -0.65rem;
+      cursor: pointer;
+      transition: transform 100ms $wfp--standard-easing,
+        background 100ms $wfp--standard-easing;
+    }
 
-    // &::-moz-range-track {
-    //   @include tracky;
-    // }
-    // &::-ms-track {
-    //   @include tracky;
-    // }
-
-    // &::-moz-range-progress {
-    //   @include fill;
-    // }
-    // &::-ms-fill-lower {
-    //   @include fill;
-    // }
     &::-moz-range-progress {
+      height: rem(4px);
       background: var(--interactive-01);
     }
 
     /* IE*/
     &::-ms-fill-lower {
+      height: rem(4px);
       background: var(--interactive-01);
     }
 
@@ -116,9 +92,16 @@
       &::-webkit-slider-thumb {
         transform: scale(1.05);
       }
+      &::-moz-range-thumb {
+        transform: scale(1.05);
+      }
     }
     &:hover:focus {
       &::-webkit-slider-thumb {
+        @include focus-outline('blurred');
+        transform: scale(1.25);
+      }
+      &::-moz-range-thumb {
         @include focus-outline('blurred');
         transform: scale(1.25);
       }
@@ -132,8 +115,23 @@
     }
   }
 
-  .#{$prefix}--slider--disabled {
+  .#{$prefix}--slider__range-wrapper--disabled {
+    .wfp--slider {
+      background: transparent;
+    }
     opacity: 0.5;
+    background: transparent;
+    .#{$prefix}--slider__track {
+      cursor: default;
+    }
+    &:hover {
+      &::-webkit-slider-thumb {
+        transform: scale(1);
+      }
+      &::-moz-range-thumb {
+        transform: scale(1);
+      }
+    }
   }
 
   .#{$prefix}--slider--disabled .#{$prefix}--slider__thumb {
@@ -173,6 +171,9 @@
     transform: translateY(-1.5px);
     z-index: 1;
     pointer-events: none;
+    @supports (-moz-appearance: none) {
+      display: none;
+    }
   }
 
   .#{$prefix}--slider__track {
